--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,9 +13,11 @@
         <Button
             android:id="@+id/fab"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:layout_margin="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+
             android:background="@color/colorPrimary"
             android:text="@string/add"
             android:textColor="@color/colorWhite" />
@@ -32,7 +33,7 @@
             android:hint="@string/search"
             android:imeOptions="actionDone"
 
-            android:padding="10dp"
+            android:padding="8dp"
             android:singleLine="true" />
 
 
@@ -41,11 +42,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/etSearch"
+            app:layoutManager="LinearLayoutManager"
+
             android:layout_marginTop="20dp">
 
         </androidx.recyclerview.widget.RecyclerView>
-
+        <TextView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:visibility="gone"
+            android:text="@string/no_data_available" />
 
     </RelativeLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
